apps/arcs/alpha/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arc-alpha
  namespace: arc-alpha
spec:
  selector: { app: arc-alpha }
  ports:
    - name: http
      port: 80
      targetPort: 5678
  type: ClusterIP
